Fixed Names not showing up

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -63,7 +63,7 @@ body {
 
 .alert-custom-obsItem{
     padding: 8px 35px 8px 14px;
-    width: 65.5%;
+    width: 66.5%;
     margin-bottom: 18px;
     color: #3c763d;
     background-color: #dff0d8;
